Complete JWT implementation with environment variables